welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:12: error: not found: value set
        set Pos (getY() + 1,6)
        ^Diagonal:26: error: not found: value x
  return x+y > 7
         ^Diagonal:26: error: not found: value y
  return x+y > 7
           ^